fixed button adding issue

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <div id="play" class="quad"></div>
     <div id="fight" class="quad"></div>
     <div id="sleep" class="quad"></div>
-    <img src="https://media1.giphy.com/media/aFEMFqZpDrkRy/giphy.gif?cid=ecf05e47xfq34zh1e6f00b84wkfrwr0or9flgkm5u58guxk8&rid=giphy.gif" id="pet"/>
+    <!-- <img src="https://media1.giphy.com/media/aFEMFqZpDrkRy/giphy.gif?cid=ecf05e47xfq34zh1e6f00b84wkfrwr0or9flgkm5u58guxk8&rid=giphy.gif" id="pet"/> -->
   </div>
 </body>
 </html>
